; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/viawd/extr_viawd.c_viawd_tmr_state.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/viawd/extr_viawd.c_viawd_tmr_state.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.viawd_softc = type { i32 }

@VIAWD_MEM_CTRL = common dso_local global i32 0, align 4
@VIAWD_MEM_CTRL_TRIGGER = common dso_local global i32 0, align 4
@VIAWD_MEM_CTRL_ENABLE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.viawd_softc*, i32)* @viawd_tmr_state to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @viawd_tmr_state(%struct.viawd_softc* %0, i32 %1) #0 {
  %3 = alloca %struct.viawd_softc*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store %struct.viawd_softc* %0, %struct.viawd_softc** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.viawd_softc*, %struct.viawd_softc** %3, align 8
  %7 = load i32, i32* @VIAWD_MEM_CTRL, align 4
  %8 = call i32 @viawd_read_4(%struct.viawd_softc* %6, i32 %7)
  store i32 %8, i32* %5, align 4
  %9 = load i32, i32* %4, align 4
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %11, label %17

11:                                               ; preds = %2
  %12 = load i32, i32* @VIAWD_MEM_CTRL_TRIGGER, align 4
  %13 = load i32, i32* @VIAWD_MEM_CTRL_ENABLE, align 4
  %14 = or i32 %12, %13
  %15 = load i32, i32* %5, align 4
  %16 = or i32 %15, %14
  store i32 %16, i32* %5, align 4
  br label %22

17:                                               ; preds = %2
  %18 = load i32, i32* @VIAWD_MEM_CTRL_ENABLE, align 4
  %19 = xor i32 %18, -1
  %20 = load i32, i32* %5, align 4
  %21 = and i32 %20, %19
  store i32 %21, i32* %5, align 4
  br label %22

22:                                               ; preds = %17, %11
  %23 = load %struct.viawd_softc*, %struct.viawd_softc** %3, align 8
  %24 = load i32, i32* @VIAWD_MEM_CTRL, align 4
  %25 = load i32, i32* %5, align 4
  %26 = call i32 @viawd_write_4(%struct.viawd_softc* %23, i32 %24, i32 %25)
  ret void
}

declare dso_local i32 @viawd_read_4(%struct.viawd_softc*, i32) #1

declare dso_local i32 @viawd_write_4(%struct.viawd_softc*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
